--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -3962,6 +3962,245 @@
   border-width: 1px !important;
 }
 
+/* line 85, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer {
+  /*
+   * Visual style sheet colors
+   */
+}
+/* line 87, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .x-panel-body .x-tabpanel-child .x-box-inner {
+  overflow-y: auto;
+}
+/* line 96, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-black {
+  background-color: black;
+}
+/* line 100, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-night-rider {
+  background-color: #333333;
+}
+/* line 104, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-charcoal {
+  background-color: #444444;
+}
+/* line 108, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-dark-gray {
+  background-color: #777777;
+}
+/* line 112, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-gray {
+  background-color: gray;
+}
+/* line 116, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-light-gray {
+  background-color: #cbcbcb;
+}
+/* line 120, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-gainsboro {
+  background-color: #dddddd;
+}
+/* line 124, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-smoke {
+  background-color: #ebebeb;
+}
+/* line 128, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-light-smoke {
+  background-color: #f4f4f4;
+}
+/* line 134, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-cerise {
+  background-color: #db2852;
+}
+/* line 138, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-sun {
+  background-color: #f2862f;
+}
+/* line 142, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-energy-yellow {
+  background-color: #f5c649;
+}
+/* line 146, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-cobalt {
+  background-color: #0047b2;
+}
+/* line 150, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-cerulean-blue {
+  background-color: #2476c3;
+}
+/* line 156, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-citrus {
+  background-color: #84c900;
+}
+/* line 160, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-free-speech-red {
+  background-color: #c70000;
+}
+/* line 166, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-energy-yellow {
+  background-color: #f5c649;
+}
+/* line 170, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-floral-white {
+  background-color: #fffaee;
+}
+/* line 176, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-pigment-green {
+  background-color: #0b9743;
+}
+/* line 180, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-madang {
+  background-color: #b6e9ab;
+}
+/* line 184, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-venetian-red {
+  background-color: #bc0430;
+}
+/* line 188, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-beauty-bush {
+  background-color: #edb2af;
+}
+/* line 192, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-navy-blue {
+  background-color: #006bbf;
+}
+/* line 196, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-cornflower {
+  background-color: #96caee;
+}
+/* line 200, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-affair {
+  background-color: #875393;
+}
+/* line 204, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-east-side {
+  background-color: #b087b9;
+}
+/* line 208, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-blue-chalk {
+  background-color: #dac5df;
+}
+/* line 214, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-white {
+  background-color: white;
+}
+/* line 218, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-light-gainsboro {
+  background-color: #e6e6e6;
+}
+/* line 222, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-light-gray {
+  background-color: #cbcbcb;
+}
+/* line 226, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-silver {
+  background-color: #b8b8b8;
+}
+/* line 230, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-suva-gray {
+  background-color: #919191;
+}
+/* line 234, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-gray {
+  background-color: gray;
+}
+/* line 238, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-denim {
+  background-color: #197ac5;
+}
+/* line 242, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-light-cobalt {
+  background-color: #0161ad;
+}
+/* line 246, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-dark-denim {
+  background-color: #014e8a;
+}
+/* line 250, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-smalt {
+  background-color: #0f4976;
+}
+/* line 254, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-dark-cerulean {
+  background-color: #0f4976;
+}
+/* line 258, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-prussian-blue {
+  background-color: #013a68;
+}
+/* line 262, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-light-cerise {
+  background-color: #de3d63;
+}
+/* line 266, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-brick-red {
+  background-color: #c6254b;
+}
+/* line 270, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-old-rose {
+  background-color: #b2314f;
+}
+/* line 274, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-fire-brick {
+  background-color: #9e1e3c;
+}
+/* line 278, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-shiraz {
+  background-color: #85253b;
+}
+/* line 282, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-falu-red {
+  background-color: #77162d;
+}
+/* line 286, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-sea-buckthorn {
+  background-color: #f39244;
+}
+/* line 290, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-tahiti-gold {
+  background-color: #da792b;
+}
+/* line 294, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-zest {
+  background-color: #c17536;
+}
+/* line 298, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-rich-gold {
+  background-color: #ae6122;
+}
+/* line 302, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-afghan-tan {
+  background-color: #925829;
+}
+/* line 306, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-russet {
+  background-color: #83491a;
+}
+/* line 310, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-elf-green {
+  background-color: #23a156;
+}
+/* line 314, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-dark-pigment-green {
+  background-color: #0b893d;
+}
+/* line 318, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-salem {
+  background-color: #1c8145;
+}
+/* line 322, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-jewel {
+  background-color: #096e31;
+}
+/* line 326, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-fun-green {
+  background-color: #156134;
+}
+/* line 330, ../../../baseapp/packages/rapture-theme/sass/src/Ext/panel/Panel.scss */
+.x-panel-developer .color-dark-jewel {
+  background-color: #0c4f26;
+}
+
 /**
  * @class Ext.window.Window
  */
