Change line in subsection to lighter gainsboro grey

--- a/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/resources/static/rapture/resources/baseapp-debug_02.css
@@ -12014,7 +12014,7 @@
 
 /* line 22, ../../../baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss */
 .feature-content .x-panel-subsection {
-  border-top: 1px gray solid;
+  border-top: 1px #dddddd solid;
   margin: 0 10px 20px 10px !important;
   left: 0 !important;
 }
