--- a/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
+++ b/plugins/rapture/nexus-rapture-baseapp/src/main/baseapp/packages/rapture-theme/sass/src/Ext/form/Panel.scss
@@ -20,7 +20,7 @@
 
 .feature-content {
   .x-panel-subsection {
-    border-top: 1px $color-gray solid;
+    border-top: 1px $color-gainsboro solid;
     margin: 0 10px 20px 10px !important;
     left: 0 !important;
     .x-toolbar {
